fix: adjust styles in contacts block

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </li>
             <li class="contacts__item">
               <img class="icon" src="assets/img/email.png" alt="E-mail icon" width="25" height="25" />
-              <p>mkoroleva5@gmail.com</p>
+              <p class="contacts__email">mkoroleva5@gmail.com</p>
             </li>
             <li class="contacts__item">
               <img class="icon" src="assets/img/telegram.png" alt="Telegram icon" width="25" height="25" />
