feat: update languages section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <section>
           <h2 class="section__title">Languages</h2>
           <ul class="section__list">
-            <li>English – B2</li>
-            <li>Italian – B2</li>
+            <li>English – C1</li>
+            <li>Italian – C1</li>
             <li>Belarusian - native</li>
             <li>Russian - native</li>
           </ul>
