--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <main class="main">
       <div class="column column-left">
         <img class="main-img" src="assets/img/my-photo.jpg" alt="My photo" draggable="false"/>
-        <h1 class="title">Maria Koroleva</h1>
+        <h1 class="title">Мария Королева</h1>
         <section>
-          <h2 class="section__title">Contacts</h2>
+          <h2 class="section__title">Контакты</h2>
           <ul class="contacts">
-            <li class="contacts__item location">
+            <li class="contacts__item">
               <img class="location-icon" src="assets/img/location.png" alt="Location icon" width="25" height="25" />
-              <div>Minsk (Belarus)<br>Nairobi (Kenya)</div>
+              <div>Минск (Беларусь)</div>
             </li>
             <li class="contacts__item">
               <img class="icon" src="assets/img/email.png" alt="E-mail icon" width="25" height="25" />
@@ -39,7 +39,7 @@
           </ul>
         </section>
         <section>
-          <h2 class="section__title courses-title">Courses</h2>
+          <h2 class="section__title courses-title">Курсы</h2>
           <ul class="section__list">
             <li>HTML and CSS Courses on codecademy.com</li>
             <li><b>The Rolling Scopes School</b> «JavaScript/Front-end. Pre-school»</li>
@@ -48,30 +48,32 @@
           </ul>
         </section>
         <section>
-          <h2 class="section__title">Languages</h2>
+          <h2 class="section__title">Языки</h2>
           <ul class="section__list">
-            <li>English – C1</li>
-            <li>Italian – C1</li>
-            <li>Belarusian - native</li>
-            <li>Russian - native</li>
+            <li>Английский – C1</li>
+            <li>Итальянский – C1</li>
+            <li>Белорусский - родной</li>
+            <li>Русский - родной</li>
           </ul>
         </section>
       </div>
       <div class="column column-right">
         <section class="section__main">
-          <h1 class="main-title">Maria Koroleva</h1>
+          <h1 class="main-title">Мария Королева</h1>
           <h2 class="speciality">Frontend developer</h2>
         </section>
         <section>
-          <h2 class="section__title about-title">About me</h2>
+          <h2 class="section__title about-title">Обо мне</h2>
           <hr />
           <div class="about">
-            The Rolling Scopes School (JavaSctipt/Front-end) - position 15 out of 1250.<br />The
-            Rolling Scopes School (Pre-school) - position 1 out of 11000.
+            The Rolling Scopes School (JavaSctipt/Front-end) - 15 место из 1250.
+            <br />The
+            Rolling Scopes School (React) - 1  место из 550.<br />The
+            Rolling Scopes School (Pre-school) - 1  место из 11000.
           </div>
         </section>
         <section>
-          <h2 class="section__title stack-title">Actual stack</h2>
+          <h2 class="section__title stack-title">Технический стек</h2>
           <hr />
           <div class="about">
             <ul>
@@ -82,7 +84,7 @@
           </div>
         </section>
         <section class="section__projects">
-          <h2 class="section-title projects-title">Projects</h2>
+          <h2 class="section-title projects-title">Проекты</h2>
           <hr />
           <div class="projects__wrapper">
             <div class="projects__item">
@@ -93,9 +95,9 @@
                 >GraphiQL</a
               >
               <div>
-                Clone of GraphiQL - GraphQL integrated development environment (IDE).
+                Клон GraphiQL - интегрированная среда разработки (IDE) GraphQL.
               </div>
-              <div>Tech stack: React, TypeScript, Vite, Redux Toolkit, Firebase, Axios, i18n, CodeMirror, React Hook Form, React Toastify</div>
+              <div>Тех. стек: React, TypeScript, Vite, Redux Toolkit, Firebase, Axios, i18n, CodeMirror, React Hook Form, React Toastify</div>
             </div>
             <div class="projects__item">
               <a
@@ -105,11 +107,10 @@
                 >Blazing 8s</a
               >
               <div>
-                Clone of card game "Blazing 8s" with own multiplayer back-end and colorful
-                animations.
+                Клон карточной игры "Blazing 8s" с собственным мультиплеерным back-end и красочными анимациями.
               </div>
               <div>
-                Tech stack: React, TypeScript, Vite, React Spring, Zustand, NestJS, Socket.io
+                Тех. стек: React, TypeScript, Vite, React Spring, Zustand, NestJS, Socket.io
               </div>
             </div>
             <div class="projects__item">
@@ -119,8 +120,8 @@
                 target="_blank"
                 >Online store</a
               >
-              <div>Online store of healthy food built with React.</div>
-              <div>Tech stack: React, TypeScript, Vite, Vitest, React Testing Library</div>
+              <div>Онлайн-магазин продуктов здорового питания на React.</div>
+              <div>Тех. стек: React, TypeScript, Vite, Vitest, React Testing Library</div>
             </div>
             <div class="projects__item">
               <a
@@ -129,8 +130,8 @@
                 target="_blank"
                 >React app</a
               >
-              <div>React app with Unsplash API fetching, forms, own server and SSR.</div>
-              <div>Tech stack: React, TypeScript, ExpressJS, SSR, Vite, Vitest, React Testing Library, Cypress, Redux Toolkit, AsyncThunk, React hook form</div>
+              <div>React-приложение с Unsplash API, формами, собственным сервером и SSR.</div>
+              <div>Тех. стек: React, TypeScript, ExpressJS, SSR, Vite, Vitest, React Testing Library, Cypress, Redux Toolkit, AsyncThunk, React hook form</div>
             </div>
             <div class="projects__item">
               <a
@@ -140,10 +141,10 @@
                 >Async Race</a
               >
               <div>
-                Race created using communication with a server (fetch, REST API), async coding /
-                promises and JS animations.
+                Гонка с коммуникацией с сервером (fetch, REST API), асинхронное программирование /
+                промисы и JS-анимации.
               </div>
-              <div>Tech stack: JavaScript, HTML5, CSS3, Vite</div>
+              <div>Тех. стек: JavaScript, HTML5, CSS3, Vite</div>
             </div>
             <div class="projects__item">
               <a
@@ -153,30 +154,29 @@
                 >Gem Puzzle</a
               >
               <div>
-                The classic "15 puzzle" game with resizable fields, stoppable timer and
-                drag'n'drop.
+                Классическая игра в "пятнашки" ("15 puzzle") с настраиваемым размером поля, управляемым таймером и drag'n'drop.
               </div>
-              <div>Tech stack: JavaScript, HTML5, CSS3, Webpack</div>
+              <div>Тех. стек: JavaScript, HTML5, CSS3, Webpack</div>
             </div>
           </div>
         </section>
         <section>
-          <h2 class="section__title">Experience</h2>
+          <h2 class="section__title">Опыт</h2>
           <hr />
           <div class="experience__wrapper">
           <div class="experience__left">
             <div class="experience__item">
               <p class="experience__date">2017-2022</p>
               <div class="experience__desc">
-                <p class="experience__org">Biogarden LLC<br>(Minsk, Belarus)</p>
-                <p class="experience__position">Head of E-commerce</p>
+                <p class="experience__org">ООО "Биогарден"<br>(Минск, Беларусь)</p>
+                <p class="experience__position">Глава отдела розницы и электронной коммерции</p>
               </div>
             </div>
             <div class="experience__item">
               <p class="experience__date">2016</p>
               <div class="experience__desc">
-                <p class="experience__org">Farmin ALC (Minsk, Belarus)</p>
-                <p class="experience__position">Sales representative</p>
+                <p class="experience__org">ОДО "Фармин" (Минск, Беларусь)</p>
+                <p class="experience__position">Торговый представитель</p>
               </div>
             </div>
           </div>
@@ -184,31 +184,30 @@
             <div class="experience__item">
               <p class="experience__date">2015</p>
               <div class="experience__desc">
-                <p class="experience__org">Tour operator Gartour (Milan, Italy)</p>
-                <p class="experience__position">Tourism manager</p>
+                <p class="experience__org">Туристический оператор Gartour (Милан, Италия)</p>
+                <p class="experience__position">Менеджер по туризму</p>
               </div>
             </div>
             <div class="experience__item">
               <p class="experience__date">2013-2014</p>
               <div class="experience__desc">
-                <p class="experience__org">Embassy of Italian Republic (Minsk, Belarus)</p>
-                <p class="experience__position">Account manager</p>
+                <p class="experience__org">Посольство Итальянской республики (Минск, Беларусь)</p>
+                <p class="experience__position">Операционист</p>
               </div>
             </div>
           </div>
         </section>
         <section class="section__education">
-          <h2 class="section__title education-title">Education</h2>
+          <h2 class="section__title education-title">Образование</h2>
           <hr />
           <div class="experience__item">
             <p class="experience__date">2011-2016</p>
             <div class="experience__desc">
               <p class="experience__org">
-                Belarusian State University, Faculty of International Relations
+                Белорусский государственный университет, факультет международных отношений
               </p>
               <p class="experience__position">
-                Qualification: economist-manager and interpreter-translator (English and Italian
-                languages)
+                Специализация: менеджер-экономиси, переводчик-референт (английского и итальянского языков)
               </p>
             </div>
           </div>
