fix: adjust styles for a4 pdf

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 Белорусский государственный университет, факультет международных отношений
               </p>
               <p class="experience__position">
-                Специализация: менеджер-экономиси, переводчик-референт (английского и итальянского языков)
+                Специализация: менеджер-экономист, переводчик-референт
               </p>
             </div>
           </div>
