--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
             <div class="projects__item">
               <a
                 class="project-title"
-                href="https://mkoroleva5-gem-puzzle.netlify.app/"
+                href="https:///gem-puzzle-mkoroleva5.netlify.app/"
                 target="_blank"
                 >Gem Puzzle</a
               >
               <div>
                 Классическая игра в "пятнашки" ("15 puzzle") с настраиваемым размером поля, управляемым таймером и drag'n'drop.
               </div>
-              <div>Тех. стек: JavaScript, HTML5, CSS3, Webpack</div>
+              <div>Тех. стек: JavaScript, HTML5, CSS3, Webpack, MVC</div>
             </div>
           </div>
         </section>
