feat: update gem-puzzle project info

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="projects__item">
               <a
                 class="project-title"
-                href="https://mkoroleva5-gem-puzzle.netlify.app/"
+                href="https:///gem-puzzle-mkoroleva5.netlify.app/"
                 target="_blank"
                 >Gem Puzzle</a
               >
@@ -156,7 +156,7 @@
                 The classic "15 puzzle" game with resizable fields, stoppable timer and
                 drag'n'drop.
               </div>
-              <div>Tech stack: JavaScript, HTML5, CSS3, Webpack</div>
+              <div>Tech stack: JavaScript, HTML5, CSS3, Webpack, MVC</div>
             </div>
           </div>
         </section>
