feat: update CV info

--- a/index.html
+++ b/index.html
@@ -11,30 +11,77 @@
   <body>
     <main class="main">
       <div class="column column-left">
-        <img class="main-img" src="assets/img/my-photo.jpg" alt="My photo" draggable="false"/>
+        <img
+          class="main-img"
+          src="assets/img/my-photo.jpg"
+          alt="My photo"
+          draggable="false"
+        />
         <h1 class="title">Maria Koroleva</h1>
         <section>
           <h2 class="section__title">Contacts</h2>
           <ul class="contacts">
             <li class="contacts__item location">
-              <img class="location-icon" src="assets/img/location.png" alt="Location icon" width="25" height="25" />
-              <div>Minsk (Belarus)<br>Nairobi (Kenya)</div>
+              <img
+                class="location-icon"
+                src="assets/img/location.png"
+                alt="Location icon"
+                width="25"
+                height="25"
+              />
+              <div>Minsk (Belarus)<br />Nairobi (Kenya)</div>
             </li>
             <li class="contacts__item">
-              <img class="icon" src="assets/img/email.png" alt="E-mail icon" width="25" height="25" />
+              <img
+                class="icon"
+                src="assets/img/email.png"
+                alt="E-mail icon"
+                width="25"
+                height="25"
+              />
               <p class="contacts__email">mkoroleva5@gmail.com</p>
             </li>
             <li class="contacts__item">
-              <img class="icon" src="assets/img/telegram.png" alt="Telegram icon" width="25" height="25" />
-              <a class="contacts__link" href="https://t.me/mkoroleva5" target="_blank">@mkoroleva5</a>
+              <img
+                class="icon"
+                src="assets/img/telegram.png"
+                alt="Telegram icon"
+                width="25"
+                height="25"
+              />
+              <a class="contacts__link" href="https://t.me/mkoroleva5" target="_blank"
+                >@mkoroleva5</a
+              >
             </li>
             <li class="contacts__item">
-              <img class="icon" src="assets/img/github.png" alt="Github icon" width="25" height="25" />
-              <a class="contacts__link" href="https://github.com/mkoroleva5" target="_blank">mkoroleva5</a>
+              <img
+                class="icon"
+                src="assets/img/github.png"
+                alt="Github icon"
+                width="25"
+                height="25"
+              />
+              <a
+                class="contacts__link"
+                href="https://github.com/mkoroleva5"
+                target="_blank"
+                >mkoroleva5</a
+              >
             </li>
             <li class="contacts__item">
-              <img class="icon" src="assets/img/linkedin.png" alt="Linkedin icon" width="25" height="25" />
-              <a class="contacts__link" href="https://www.linkedin.com/in/mkoroleva5/" target="_blank">mkoroleva5</a>
+              <img
+                class="icon"
+                src="assets/img/linkedin.png"
+                alt="Linkedin icon"
+                width="25"
+                height="25"
+              />
+              <a
+                class="contacts__link"
+                href="https://www.linkedin.com/in/mkoroleva5/"
+                target="_blank"
+                >mkoroleva5</a
+              >
             </li>
           </ul>
         </section>
@@ -43,7 +90,10 @@
           <ul class="section__list">
             <li>HTML and CSS Courses on codecademy.com</li>
             <li><b>The Rolling Scopes School</b> «JavaScript/Front-end. Pre-school»</li>
-            <li><b>The Rolling Scopes School</b> «JavaScript/Front-end. Frontend developer»</li>
+            <li>
+              <b>The Rolling Scopes School</b> «JavaScript/Front-end. Frontend
+              developer»
+            </li>
             <li><b>The Rolling Scopes School</b> «JavaScript/Front-end. React»</li>
           </ul>
         </section>
@@ -66,22 +116,25 @@
           <h2 class="section__title about-title">About me</h2>
           <hr />
           <div class="about">
-            The Rolling Scopes School (JavaSctipt/Front-end) - position 15 out of 1250.<br />The
-            Rolling Scopes School (Pre-school) - position 1 out of 11000.
+            The Rolling Scopes School (JavaSctipt/Front-end) - position 15 out of
+            1250.<br />The Rolling Scopes School (Pre-school) - position 1 out of 11000.
           </div>
         </section>
         <section>
           <h2 class="section__title stack-title">Actual stack</h2>
           <hr />
           <div class="about">
-            <ul>
+            <ul class="list">
               <li>JavaScript, TypeScript, ReactJS</li>
-              <li>Webpack/Vite, Zustand/Redux Toolkit, Jest/Vitest/Cypress/React Testing Library</li>
+              <li>
+                Webpack/Vite, Zustand/Redux Toolkit, Jest/Vitest/Cypress/React Testing
+                Library
+              </li>
               <li>HTML5, CSS3, Git, Figma, Photoshop</li>
             </ul>
           </div>
         </section>
-        <section class="section__projects">
+        <!-- <section class="section__projects">
           <h2 class="section-title projects-title">Projects</h2>
           <hr />
           <div class="projects__wrapper">
@@ -159,16 +212,33 @@
               <div>Tech stack: JavaScript, HTML5, CSS3, Webpack, MVC</div>
             </div>
           </div>
-        </section>
+        </section> -->
         <section>
           <h2 class="section__title">Experience</h2>
           <hr />
           <div class="experience__wrapper">
-          <div class="experience__left">
+            <div class="experience__item">
+              <p class="experience__date">2022-2023</p>
+              <div class="experience__desc">
+                <p class="experience__org">Company (Remote)</p>
+                <p class="experience__position">
+                  Tech stack: ReactJS, TypeScript, Vite, Redux Toolkit, Axios,
+                  i18n, CodeMirror, React Hook Form, React Toastify, React Spring
+                  <ul class="list exp-list">
+                    <li>Implementing responsive/adaptive and UI/UX-friendly designs</li>
+                    <li>Working with API fetching (React Query, Axios)</li>
+                    <li>Creating GraphQL integrated development environment (IDE)</li>
+                    <li>Working with state managers (RTK, Zustand) and routing (React Router)</li>
+                    <li>Creating JS animations (Spring, Framer-Motion)</li>
+                    <li>Testing (Jest, React Testing Library, Cypress)</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
             <div class="experience__item">
               <p class="experience__date">2017-2022</p>
               <div class="experience__desc">
-                <p class="experience__org">Biogarden LLC<br>(Minsk, Belarus)</p>
+                <p class="experience__org">Biogarden LLC (Minsk, Belarus)</p>
                 <p class="experience__position">Head of E-commerce</p>
               </div>
             </div>
@@ -179,8 +249,6 @@
                 <p class="experience__position">Sales representative</p>
               </div>
             </div>
-          </div>
-          <div class="experience__right">
             <div class="experience__item">
               <p class="experience__date">2015</p>
               <div class="experience__desc">
@@ -191,7 +259,9 @@
             <div class="experience__item">
               <p class="experience__date">2013-2014</p>
               <div class="experience__desc">
-                <p class="experience__org">Embassy of Italian Republic (Minsk, Belarus)</p>
+                <p class="experience__org">
+                  Embassy of Italian Republic (Minsk, Belarus)
+                </p>
                 <p class="experience__position">Account manager</p>
               </div>
             </div>
@@ -207,8 +277,8 @@
                 Belarusian State University, Faculty of International Relations
               </p>
               <p class="experience__position">
-                Qualification: economist-manager and interpreter-translator (English and Italian
-                languages)
+                Qualification: economist-manager and interpreter-translator (English and
+                Italian languages)
               </p>
             </div>
           </div>
